testsuite/tests/profiling/should_fail/proffail001.hs

module Foo where

wibble :: a
wibble = {-# SCC "foo bar" #-} wibble

